# givbacks-scripts

./: .gitignore  README.md  babel.config.js  givbacks-scripts.ipynb  index.js  package.json  pyproject.toml
js/: README.md  index.js  package.json
js/src/: utils.ts
reports/: 1.json
src/: utils.ts
