[tool.poetry]
name = "givback-scripts"
version = "0.1.0"
description = ""
authors = ["Fábio Mendes <ms.fabiomendes@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
pandas = "^1.3.3"
ipykernel = "^6.4.1"
graphqlclient = "^0.2.4"
web3 = "^5.23.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
